Copied the following files from portalB/src/cocoon to portalB/src/ral:
portalB/src/cocoon/sitemap.xmap 
portalB/src/cocoon/html/agindex.html
portalB/src/cocoon/html/agregistry.html
portalB/src/cocoon/html/agregadmin.html
portalB/src/cocoon/html/agregistryhelp.html

10 October 2003 by Elizabeth Auden

--- a/astrogrid/portalB/src/ral/html/agindex.html
+++ b/astrogrid/portalB/src/ral/html/agindex.html
@@ -43,28 +43,41 @@
  style="color: rgb(51,51,255);">
              	<!-- Menu -->                <td
  style="background-color: rgb(204,204,204); width: 140px;">             
-     <a href="index.html"><br>
- <u><b>Home</b></u></a>                   <br>
+         <a href="agindex.html"><br>
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Home</b></u></font></a> 
+         <br>
       <br>
-                   <a href="agregistry.html"><u><b>Browse Registry</b></u></a> 
-                  <br>
+         <a href="agregistry.html"> 
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Browse Registry</b></u></font></a> 
+         <br>
       <br>
-                   <a href="agdataquery.html"><u><b>Data Query</b></u></a> 
-                  <br>
+         <a href="agregadmin.html">
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Registry Admin</b></u></font></a> 
+         <br>
       <br>
-                   <a href="agmyspace.html"><u><b>Browse MySpace</b></u></a> 
-                  <br>
+         <a href="agdataquery.html">
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Data Query</b></u></font></a> 
+         <br>
       <br>
-			      <a href="agadministration.html"><u><b>Admin</b></u></a>
-			      <br /><br />
-                   <a href="agjobmonitor.html"><u><b>Job Monitor</b></u></a> 
-                  <br>
+         <a href="agmyspace.html"> 
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Browse MySpace</b></u></font></a> 
+         <br>
       <br>
-                   <a href="agtools.html"><u><b>Tools</b></u></a>       
-           <br>
+	 <a href="agadministration.html">
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Admin</b></u></font></a> 
+	 <br>
       <br>
-                   <a href="aglogout.html"><u><b>Logout</b></u></a>     
-             <br>
+         <a href="agjobmonitor.html"> 
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Job Monitor</b></u></font></a> 
+         <br>
+      <br>
+         <a href="agtools.html">       
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Tools</b></u></font></a> 
+         <br>
+      <br>
+         <a href="aglogout.html">     
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Logout</b></u></font></a> 
+         <br>
       <br>
                 </td>
                 <td style="vertical-align: top;" rowspan="2"> 	         
