*** empty log message ***

--- a/astrogrid/portalB/src/ral/html/aglogin.html
+++ b/astrogrid/portalB/src/ral/html/aglogin.html
@@ -101,7 +101,7 @@
     </center> 
    </form>
    <br />
-   If your new to Astrogrid please sign in here click: <a href="agadministration.html?action=insertaccount">Register</a>
+   If you are new to Astrogrid please sign in here click: <a href="agadministration.html?action=insertaccount">Register</a>
                               <!-- End Real  pages go here -->
   
                            </td>
