Job Monitor changed to Job Manager

--- a/astrogrid/portalB/src/cocoon/html/agjobmonitorhelp.html
+++ b/astrogrid/portalB/src/cocoon/html/agjobmonitorhelp.html
@@ -57,7 +57,7 @@
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
                   <br><br>
-                  <i><b>Job Monitor</b></i>
+                  <i><b>Job Manager</b></i>
                   <br><br>
                   <a href="agtools.html"><b>Tools</b></a>
                   <br><br>
