--- a/astrogrid/portalB/src/cocoon/html/agdataqueryhelp.html
+++ b/astrogrid/portalB/src/cocoon/html/agdataqueryhelp.html
@@ -57,7 +57,7 @@
                   <br /><br />
                   <a href="/cocoon/astrogrid/agmyspace.html"><b>Browse MySpace</b></a>
                   <br /><br />
-                  <a href="/cocoon/astrogrid/agjobmonitor.html"><b>Job Monitor</b></a>
+                  <a href="/cocoon/astrogrid/agjobmonitor.html"><b>Job Manager</b></a>
                   <br /><br />
                   <a href="/cocoon/astrogrid/agtools.html"><b>Tools</b></a>
                   <br /><br />
