Job Monitor changed to Job Manager

--- a/astrogrid/portalB/src/ral/html/agmyspacehelp.html
+++ b/astrogrid/portalB/src/ral/html/agmyspacehelp.html
@@ -59,7 +59,7 @@ Help                      </font>                   <br>
       <br>
                    <i><b>Browse MySpace</b></i>                   <br>
       <br>
-                   <a href="agjobmonitor.html"><b>Job Monitor</b></a>   
+                   <a href="agjobmonitor.html"><b>Job Manager</b></a>   
                <br>
       <br>
                    <a href="agtools.html"><b>Tools</b></a>              
