--- a/astrogrid/portalB/src/ral/html/agnologin.html
+++ b/astrogrid/portalB/src/ral/html/agnologin.html
@@ -55,7 +55,7 @@
                   <br><br>
                   <i><b>Browse MySpace</b></i>
                   <br><br>
-                  <i><b>Job Monitor</b></i>
+                  <i><b>Job Manager</b></i>
                   <br><br>
                   <i><b>Tools</b></i>
                   <br><br>
