--- a/astrogrid/portalB/src/ral/html/agtoolshelp.html
+++ b/astrogrid/portalB/src/ral/html/agtoolshelp.html
@@ -60,7 +60,7 @@ Utilities Help                      </font>                   <br>
                    <a href="agmyspace.html"><b>Browse MySpace</b></a>   
                <br>
       <br>
-                   <a href="agjobmonitor.html"><b>Job Monitor</b></a>   
+                   <a href="agjobmonitor.html"><b>Job Manager</b></a>   
                <br>
       <br>
                    <i><b>Tools</b></i>                   <br>
