--- a/astrogrid/portalB/src/ral/html/agdataqueryhelp.html
+++ b/astrogrid/portalB/src/ral/html/agdataqueryhelp.html
@@ -56,7 +56,7 @@
                   <br><br>
                   <a href="agmyspace.html"><b>Browse MySpace</b></a>
                   <br><br>
-                  <a href="agjobmonitor.html"><b>Job Monitor</b></a>
+                  <a href="agjobmonitor.html"><b>Job Manager</b></a>
                   <br><br>
                   <a href="agtools.html"><b>Tools</b></a>
                   <br><br>
