--- a/astrogrid/portalB/src/ral/html/agindex.html
+++ b/astrogrid/portalB/src/ral/html/agindex.html
@@ -68,7 +68,7 @@
 	 <br>
       <br>
          <a href="agjobmonitor.html"> 
-         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Job Monitor</b></u></font></a> 
+         <font color="#3333FF" face="arial, helvetica, sans-serif"><u><b>Job Manager</b></u></font></a> 
          <br>
       <br>
          <a href="agtools.html">       
