--- a/astrogrid/portalB/src/ral/html/agjobmonitorhelp.html
+++ b/astrogrid/portalB/src/ral/html/agjobmonitorhelp.html
@@ -62,7 +62,7 @@
                     <a href="agmyspace.html"><b>Browse MySpace</b></a>  
                 <br>
        <br>
-                    <i><b>Job Monitor</b></i>                   <br>
+                    <i><b>Job Manager</b></i>                   <br>
        <br>
                     <a href="agtools.html"><b>Tools</b></a>             
      <br>
