For some reason these weren't getting picked up by javadoc.

--- a/astrogrid/jes/test/java/org/astrogrid/jes/testutils/naming/package.html
+++ b/astrogrid/jes/test/java/org/astrogrid/jes/testutils/naming/package.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body bgcolor="white">
-Rough and ready naming service.
+Very rough and ready naming service.
 
 The JES uses the naming service built into Axis to locate the database.  This package contains a
 rough and ready simple naming service to plug in instead.  It's of limited use - if you try to 
