--- a/astrogrid/jes/test/java/org/hsqldb/package.html
+++ b/astrogrid/jes/test/java/org/hsqldb/package.html
@@ -1,14 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-    <title></title>
-  </head>
-
-  <body>
-    <p>
-      Contains just one class: jdbcDataSource, which inexplicably isn't packaged in the hsql.jar file. 
+<head>
+</head>
+<body bgcolor="white">
+Contains just one class: jdbcDataSource, which inexplicably isn't packaged in the hsql.jar file. 
 If you have problems with this class, it's likely that the jar file has moved on a version, but
 this class hasn't been updated.
-    </p>
-  </body>
+</body>
 </html>
