--- a/astrogrid/jes/test/java/org/astrogrid/jes/hsqltryout/package.html
+++ b/astrogrid/jes/test/java/org/astrogrid/jes/hsqltryout/package.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body bgcolor="white">
-Bits and pieces used for testing.
+Trying out the HSQLDB that we're going to use for unit testing.
 </body>
 </html>
