--- a/astrogrid/portal/site/web/static/workflow/workflow.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow.html
@@ -10,7 +10,7 @@
     <!--
       Content.
       -->
-    <table class="main" height="100%" width="100%">
+    <table class="main">
 
       <tr>
         <!--
@@ -62,7 +62,7 @@
           Main content.
           -->
 
-        <td class="main-content"><table class="main-content" width="100%" height="100%">
+        <td class="main-content"><table class="main-content" width="100%">
           <tr>
             <td><table cellpadding="0" cellspacing="0"
                     style="background-color: LightGray;">
@@ -87,13 +87,14 @@
                 <td style="border-left-style: solid; border-top-style: solid;"><a href="#home">Home&nbsp;</a></td>
                 <td style="border-left-style: double; border-top-style: solid;"><a href="#main-menu">Menu&nbsp;</a></td>
               </tr>
-            </table></td>
+            </table>
+            </td>
           </tr>
 <!-- Main display body -->          
           <tr class="main-content" valign="top">
             <td style="border-top-style: ridge; border-bottom-style: ridge;">
               <table cellpadding="0" cellspacing="0"
-                     style="background-color: LightGray;">
+                     style="background-color: LightGray;">                                
                 <tr>
                   <td colspan="5" style="border-top-style: solid; border-right-style: solid;" align="center">
                     Design Jobs
@@ -102,12 +103,11 @@
                     Spacing.
                     -->
                   <td style="border-right-style: none;" width="100%">&nbsp;</td>
-                  <td style="border-top-style: solid; border-right-style: solid;" nowrap>
+                  <td nowrap style="border-top-style: solid; border-right-style: solid;">
                     Monitor Jobs
                   </td>                  
                 </tr>
-                <p>
-                <tr>
+                <tr>                
                   <td style="border-right-style: double;" align="center">
                     <a href="workflow_new.html">&nbsp;New&nbsp;</a>
                   </td>
@@ -129,15 +129,18 @@
                   <td style="border-right-style: none;" width="100%">&nbsp;</td>
                   <td align="center">
                     <a href="workflow_monitor.html">&nbsp;Monitor&nbsp;</a>               
-                  </td>
+                  </td>                  
                 </tr>
-                </p>
               </table>
               <table cellpadding="0" cellspacing="0">
               <!--
                 List of workflows
                 -->
-                <p/>
+                <tr>
+                  <td>
+                    &nbsp;
+                  </td>
+                </tr>
                 <tr>
                   <td>
                     Workflows currently stored in your mySpace: 
