--- a/astrogrid/portal/site/web/static/workflow/workflow_new.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_new.html
@@ -135,7 +135,12 @@
                 <table cellpadding="0" cellspacing="0">                      
                   <!--
                     New
-                    -->                 
+                    -->
+                    <tr>
+                      <td>
+                        &nbsp;
+                      </td>
+                    </tr>                                     
                     <tr>
                       <td>
                         Job Name:          
