--- a/astrogrid/portal/site/web/static/workflow/workflow_monitor.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_monitor.html
@@ -106,7 +106,6 @@
                     Monitor Jobs
                   </td>                  
                 </tr>
-                <p>
                 <tr>
                   <td style="border-right-style: double;" align="center">
                     <a href="workflow_new.html">&nbsp;New&nbsp;</a>
@@ -131,13 +130,16 @@
                     <a href="workflow_monitor.html">&nbsp;Monitor&nbsp;</a>               
                   </td>
                 </tr>
-                </p>
               </table>
               <table cellpadding="0" cellspacing="0">
               <!--
                 List of workflows
                 -->
-                <p/>
+                <tr>
+                  <td>
+                    &nbsp;
+                  </td>
+                </tr>
                 <tr>
                   <td>
                     Status of jobs currently submitted to JES: 
