Changes following validation:
http://validator.w3.org

--- a/astrogrid/portal/site/web/static/workflow/workflow_submit.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_submit.html
@@ -106,7 +106,6 @@
                     Monitor Jobs
                   </td>                  
                 </tr>
-                <p>
                 <tr>
                   <td style="border-right-style: double;" align="center">
                     <a href="workflow_new.html">&nbsp;New&nbsp;</a>
@@ -131,7 +130,6 @@
                     <a href="workflow_monitor.html">&nbsp;Monitor&nbsp;</a>               
                   </td>
                 </tr>
-                </p>
               </table>
               <table cellpadding="0" cellspacing="0">
                                                                
@@ -141,7 +139,11 @@
               <!--
                 List of workflows
                 -->
-                <p/>
+                <tr>
+                  <td>
+                    &nbsp;
+                  </td>
+                </tr>
                 <tr>
                   <td>
                     Workflows currently stored in your mySpace: 
@@ -150,17 +152,17 @@
                 <tr>
                   <td>
                     <ul>
-                      <li>workflow name etc &nbsp;<input type="checkbox"></li>
-                      <li>workflow name etc &nbsp;<input type="checkbox"></li>
-                      <li>workflow name etc &nbsp;<input type="checkbox"></li>
-                      <li>workflow name etc &nbsp;<input type="checkbox"></li>                        
+                      <li>workflow name etc &nbsp;<input type="checkbox" /></li>
+                      <li>workflow name etc &nbsp;<input type="checkbox" /></li>
+                      <li>workflow name etc &nbsp;<input type="checkbox" /></li>
+                      <li>workflow name etc &nbsp;<input type="checkbox" /></li>                        
                     </ul>
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <form name="submit_form" action="workflow.html">
-                      <input type="Submit" value="Submit"/>
+                      <input type="submit" value="Submit"/>
                     </form>
                   </td>
                 </tr>                
