--- a/astrogrid/portal/site/web/static/workflow/workflow_edit2.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_edit2.html
@@ -106,7 +106,6 @@
                     Monitor Jobs
                   </td>                  
                 </tr>
-                <p>
                 <tr>
                   <td style="border-right-style: double;" align="center">
                     <a href="workflow_new.html">&nbsp;New&nbsp;</a>
@@ -131,10 +130,8 @@
                     <a href="workflow_monitor.html">&nbsp;Monitor&nbsp;</a>               
                   </td>
                 </tr>
-                </p>
               </table>
               <table cellpadding="0" cellspacing="0">
-                <p>
                 <tr>
                   <td>
                     <img src="../../images/SequenceWithTwoStepFlow.gif" alt="SequenceWithTwoStepFlow"/>
@@ -201,9 +198,9 @@
                         </td>
                         <td>
                           Cone Search
-                        <td></td>
-                        <td></td>
                         </td>
+                        <td></td>
+                        <td></td>
                       </tr>                    
                       <tr>
                         <td>
@@ -259,7 +256,9 @@
                       </tr>
                       <tr>
                         <td></td>
-                        <td></td>
+                        <td>
+                          Input:
+                        </td>
                         <td>
                           Name: in
                         </td>
@@ -293,7 +292,9 @@
                       </tr>
                       <tr>
                         <td></td>
-                        <td></td>
+                        <td>
+                          Input:
+                        </td>
                         <td>
                           Name: config
                         </td>
@@ -323,7 +324,6 @@
                     </table>
                   </td>               
                 </tr>
-                </p>
               </table>                
             </td>
           </tr>     
