--- a/astrogrid/portal/site/web/static/workflow/workflow_new2.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_new2.html
@@ -194,7 +194,7 @@
                             </select>
                           </td>
                           <td>
-                            <input type="submit" value="Submit" />
+                            <input type="submit" value="Select" />
                           </td>                        
                         </tr>
                       </form>                                            
