Changes following validation:
http://validator.w3.org

--- a/astrogrid/portal/site/web/static/workflow/workflow_new2.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_new2.html
@@ -138,66 +138,60 @@
                   </td>
                   <td>
                     <table cellpadding="0" cellspacing="0">
-                      <form name="tool_select_form" action="workflow_new3.html">
-                        <tr>
-                          <td>
-                            Step 1:
-                          </td>
-                          <td>
-                            <select name="toolType">
-                              <option value="queryTool">Query Tool
-                              <option value="mergeTool">Merge Tool
-                              <option value="commandLineTool">Command Line Tool
-                              <option value="otherTool">Other Tool                                                                                    
-                            </select>
-                          </td>
-                          <td>
+                      <tr>                       
+                        <td>
+                          Step 1:
+                        </td>
+                        <td>
+                          <select name="toolType">
+                            <option value="queryTool">Query Tool</option>
+                            <option value="mergeTool">Merge Tool</option>
+                            <option value="commandLineTool">Command Line Tool</option>
+                            <option value="otherTool">Other Tool</option>                                                              
+                          </select>
+                        </td>
+                        <td>
+                          <form name="tool_select_form_step1" action="workflow_new3.html"> 
                             <input type="submit" value="Select" />
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            &nbsp;
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            Step 2:
-                          </td>
-                          <td>
-                            <select name="toolType">
-                              <option value="queryTool">Query Tool
-                              <option value="mergeTool">Merge Tool
-                              <option value="commandLineTool">Command Line Tool
-                              <option value="otherTool">Other Tool                                                                                    
-                            </select>
-                          </td>
-                          <td>
+                          </form>
+                        </td>                                
+                      </tr>
+                      <tr>
+                        <td>
+                          Step 2:
+                        </td>
+                        <td>
+                          <select name="toolType">
+                            <option value="queryTool">Query Tool</option>
+                            <option value="mergeTool">Merge Tool</option>
+                            <option value="commandLineTool">Command Line Tool</option>
+                            <option value="otherTool">Other Tool</option>                                                              
+                          </select>
+                        </td>
+                        <td>
+                          <form name="tool_select_form_step2" action="workflow_new3.html">
                             <input type="submit" value="Select" />
-                          </td>                        
-                        </tr>
-                        <tr>
-                          <td>
-                            &nbsp;
-                          </td>
-                        </t>                      
-                        <tr>
-                          <td>
-                            Step 3:
-                          </td>
-                          <td>
-                            <select name="toolType">
-                              <option value="queryTool">Query Tool
-                              <option value="mergeTool">Merge Tool
-                              <option value="commandLineTool">Command Line Tool
-                              <option value="otherTool">Other Tool                                                                                    
-                            </select>
-                          </td>
-                          <td>
+                          </form>
+                        </td>                                            
+                      </tr>                     
+                      <tr>
+                        <td>
+                          Step 3:
+                        </td>
+                        <td>
+                          <select name="toolType">
+                            <option value="queryTool">Query Tool</option>
+                            <option value="mergeTool">Merge Tool</option>
+                            <option value="commandLineTool">Command Line Tool</option>
+                            <option value="otherTool">Other Tool</option>                                                              
+                          </select>
+                        </td>
+                        <td>
+                          <form name="tool_select_form_step3" action="workflow_new3.html"> 
                             <input type="submit" value="Select" />
-                          </td>                        
-                        </tr>
-                      </form>                                            
+                          </form>
+                        </td>                                                          
+                      </tr>
                     </table>
                   </td>
                 </tr>               
