--- a/astrogrid/portal/site/web/static/workflow/workflow.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow.html
@@ -62,7 +62,7 @@
           Main content.
           -->
 
-        <td class="main-content"><table class="main-content" width="100%">
+        <td class="main-content"><table class="main-content" width="100%" height="100%">
           <tr>
             <td><table cellpadding="0" cellspacing="0"
                     style="background-color: LightGray;">
