--- a/astrogrid/portal/site/web/static/workflow/workflow_new3.html
+++ b/astrogrid/portal/site/web/static/workflow/workflow_new3.html
@@ -138,18 +138,18 @@
                   </td>
                   <td>
                     <table cellpadding="0" cellspacing="0">
-                      <form name="tool_insert_form" action="workflow_new2.html">
-                        <tr>
-                          <td>
-                            Input/Output options for this particualr tool to be displayed/competed here..... 
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <input type="submit" value="Select" />
-                          </td>
-                        </tr>                        
-                      </form>
+                      <tr>
+                        <td>
+                          Input/Output options for this particualr tool to be displayed/competed here..... 
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <form name="tool_insert_form" action="workflow_new2.html">
+                            <input type="submit" value="Submit" />
+                          </form>
+                        </td>                         
+                      </tr>                        
                     </table>
                   </td>
                 </tr>               
